# Sentinel-Vault

./: .gitignore  DELETE_CONFIRMATION_FIX.md  DEVELOPMENT.md  README.md  README_EN.md  index.html  package.json  tailwind.config.js  test.html
docs/: PRD.md
docs/dev/: ARCHITECTURE_QUICK_REFERENCE.md  ARCHITECTURE_REDESIGN_V2.md  CHROME_IMPORT.md  CLIPBOARD_FIX.md  COMPLETION_SUMMARY.md  COMPLETION_SUMMARY_ARCHITECTURE_V2.md  CONFLICT_HANDLING.md  DOCUMENTATION_INDEX.md  FEATURE_ANALYSIS_SERVER_CREDENTIALS.md  FINAL_CONFIRMATION_V2.md  IMPLEMENTATION_PLAN_SERVER_CREDENTIALS.md  IMPLEMENTATION_PLAN_V2_UPDATED.md  MIGRATION_AND_IMPACT_ANALYSIS.md  OVERVIEW_P3_CREDENTIALS.md  PHASE_0_STARTUP_GUIDE.md  QUICK_DECISION_GUIDE.md  README.md  ROADMAP.md  SMART_AUTOLOCK.md  STATS_PANEL.md  STEALTH_MODES.md  THEME_CUSTOMIZATION.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_create_projects_table.sql  001_init_database.sql  002_add_domain_certificate_tables.sql  003_create_imports_table.sql  006_create_vault_history.sql  007_create_import_logs.sql
src-tauri/migrations/backup/: 002_create_relations_table.sql  004_create_api_keys_table.sql  005_migrate_vault_relations.sql  008_alter_projects_table.sql
src-tauri/src/: commands.rs  crypto.rs  database.rs  lib.rs  main.rs
src-tauri/src/commands/: api_key.rs  certificate.rs  chrome_import.rs  domain.rs  mod.rs  project.rs  relation.rs  security.rs  settings.rs  utils.rs  vault.rs  whois.rs
src/components/: ApiKeysView.tsx  CertificateView.tsx  DomainView.tsx  ImportsView.tsx  (+15 more)
(+55 files in other folders)
